# Bachelor-UTest-lib

./: CMakeLists.txt  README.md
UTest_lib/: AssertFailedException.cpp  AssertFailedException.h  CMakeLists.txt  ContainerResult.h  IOErrors.cpp  IOErrors.h  Paths.cpp  Paths.h  Platform.h  Serialize.cpp  Serialize.h  TestCase.h  UTest.h  UTestCase.h  UTestMacro.h  UTestManagement.cpp  UTestManagement.h  UTestResult.cpp  UTestResult.h  UnitTestManagement.cpp  UnitTestManagement.h
